WebKit Bugzilla
New
Browse
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
281500
[FFC] Fix imported/w3c/web-platform-tests/css/css-flexbox/flex-direction-column.html
https://bugs.webkit.org/show_bug.cgi?id=281500
Summary
[FFC] Fix imported/w3c/web-platform-tests/css/css-flexbox/flex-direction-colu...
zalan
Reported
2024-10-15 08:58:56 PDT
ssia
Attachments
Patch
(14.69 KB, patch)
2024-10-15 09:09 PDT
,
zalan
no flags
Details
Formatted Diff
Diff
[fast-cq]Patch
(14.69 KB, patch)
2024-10-15 13:25 PDT
,
zalan
no flags
Details
Formatted Diff
Diff
Show Obsolete
(1)
View All
Add attachment
proposed patch, testcase, etc.
zalan
Comment 1
2024-10-15 09:09:08 PDT
Created
attachment 472941
[details]
Patch
zalan
Comment 2
2024-10-15 13:25:18 PDT
Created
attachment 472944
[details]
[fast-cq]Patch
EWS
Comment 3
2024-10-16 20:32:34 PDT
Committed
285301@main
(7e3f3acc5bbc): <
https://commits.webkit.org/285301@main
> All reviewed patches have been landed. Closing bug and clearing flags on
attachment 472944
[details]
.
Radar WebKit Bug Importer
Comment 4
2024-10-16 20:33:14 PDT
<
rdar://problem/138087206
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug