https://bugs.webkit.org/show_bug.cgi?id=281500  [FFC] Fix imported/w3c/web-platform-tests/css/css-flexbox/flex-direction-column.html

Reviewed by Antti Koivisto.

Add support for computing the _content_ height for flex items when the main
axis is perpendicular to the inline axis. This is implemented in legacy flex layout
through a rather error-prone way where RenderBox::updateLogicalHeight stores
the _current_ logical height before applying additional height constraints.
(it assumes the _current_ logical value reflects the content height)

* Source/WebCore/layout/LayoutState.cpp:
(WebCore::Layout::LayoutState::LayoutState):
(WebCore::Layout::LayoutState::logicalHeightWithFormattingContextForBox const):
* Source/WebCore/layout/LayoutState.h:
* Source/WebCore/layout/formattingContexts/flex/FlexFormattingUtils.cpp:
(WebCore::Layout::FlexFormattingUtils::usedMinimumSizeInMainAxis const):
(WebCore::Layout::FlexFormattingUtils::usedMaxContentSizeInMainAxis const):
* Source/WebCore/layout/integration/LayoutIntegrationFormattingContextLayout.cpp:
(WebCore::LayoutIntegration::formattingContextRootLogicalHeightForType):
* Source/WebCore/layout/integration/LayoutIntegrationFormattingContextLayout.h:
* Source/WebCore/layout/integration/LayoutIntegrationUtils.cpp:
(WebCore::Layout::IntegrationUtils::maxContentWidth const):
(WebCore::Layout::IntegrationUtils::minContentWidth const):
(WebCore::Layout::IntegrationUtils::minContentHeight const):
(WebCore::Layout::IntegrationUtils::maxContentSize const): Deleted.
(WebCore::Layout::IntegrationUtils::minContentSize const): Deleted.
* Source/WebCore/layout/integration/LayoutIntegrationUtils.h:
* Source/WebCore/layout/layouttree/LayoutTreeBuilder.cpp:
(WebCore::Layout::printLayoutTreeForLiveDocuments):
* Source/WebCore/rendering/RenderView.cpp:
(WebCore::RenderView::RenderView):

Canonical link: https://commits.webkit.org/285301@main