Source/WebCore/layout/integration/LayoutIntegrationFormattingContextLayout.h
@@ -48,5 +48,10 @@ enum class LogicalWidthType : uint8_t  {
 };
 LayoutUnit formattingContextRootLogicalWidthForType(const Layout::ElementBox&, LogicalWidthType);
 
+enum class LogicalHeightType : uint8_t  {
+    MinContent
+};
+LayoutUnit formattingContextRootLogicalHeightForType(const Layout::ElementBox&, LogicalHeightType);
+
 }
 }
